Fix: codeblocks X-axis overflow on small screens by adding a scrollbar

--- a/src/book-template/style.css
+++ b/src/book-template/style.css
@@ -271,4 +271,10 @@ th, td {
     right: 20px;
     bottom: 20px;
   }
+
+  pre {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+  }
 }
